# voxel-game

./: 1.ppm  2.ppm  3.ppm  4.ppm  CMakeLists.txt  README.md  imgui.ini  noise.ppm  test.ppm
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.cpp  Engine.hpp  Init.cpp  Init.hpp  Scene.cpp  Scene.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/Engine/Debug/: Drawing.cpp  Drawing.hpp  line.frag  line.vert
src/Engine/Ecs/: Component.cpp  Component.hpp  ComponentIterator.hpp  ComponentPool.hpp  Ecs.txt  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  TODO.txt
src/Engine/Graphics/: CubeMap.cpp  CubeMap.hpp  Drawing.cpp  Drawing.hpp  Fbo.cpp  Fbo.hpp  GraphicsPrimitives.cpp  GraphicsPrimitives.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  null_opengl_objects.txt  opengl_notes.txt  test.glsl
src/Engine/Input/: ButtonAction.hpp  InputManager.cpp  InputManager.hpp  KeyCode.hpp  MouseButton.hpp  MouseMoveAction.hpp  input.txt
src/Engine/Renderer/: Renderer.cpp  Renderer.hpp
src/Engine/Renderer/Skybox/: skybox.frag  skybox.vert
src/Error/: Error.hpp  Panic.cpp  Panic.hpp
src/Game/: EntitySystem.cpp  EntitySystem.hpp  GameScene.cpp  GameScene.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  a.frag  b.vert  cubemap.vert  shader.frag  shader.vert
src/Game/Actions/: AttackAction.cpp  AttackAction.hpp  CameraRotateAction.cpp  CameraRotateAction.hpp  JumpAction.cpp  JumpAction.hpp
src/Game/Blocks/: Block.cpp  Block.hpp  BlockData.cpp  BlockData.hpp  BlockSystem.cpp  BlockSystem.hpp  Chunk.cpp  Chunk.hpp  ChunkSystem.cpp  ChunkSystem.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Structure.cpp  Structure.hpp  WorldGen.cpp  WorldGen.hpp  blockData.json  block_vertex_format.txt  chunk.frag  chunk.vert  chunk_storage.txt
src/Game/Components/: AnimatedModel.cpp  AnimatedModel.hpp  MeshRenderer.hpp  Position.cpp  Position.hpp  Rotation.cpp  Rotation.hpp
src/Game/Console/: Console.cpp  Console.hpp  utils.voxl
src/Game/Debug/: Debug.cpp  Debug.hpp
src/Game/Inventory/: 3dItem.frag  3dItem.vert  Inventory.cpp  Inventory.hpp  InventorySystem.cpp  InventorySystem.hpp  uiShader.vert
src/Game/Inventory/Shaders/: 3dItem.frag  3dItem.vert  font.vert  item.frag  item.vert  uiColored.frag  uiColored.vert  uiTextured.frag  uiTextured.vert
src/Game/Item/: CraftingData.cpp  CraftingData.hpp  Item.cpp  Item.hpp  ItemData.cpp  ItemData.hpp  ItemStack.cpp  ItemStack.hpp
src/Game/Player/: PlaterInteractionSystem.cpp  PlayerAnimationComponent.cpp  PlayerAnimationComponent.hpp  PlayerInteracationSystem.hpp  PlayerInteractionSystem.cpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp
src/Game/Rendering/: RenderingSystem.cpp  RenderingSystem.hpp  ShadowMapping.hpp  UiTexturedShader.hpp
src/Game/Rendering/Shaders/: 2dTextured.vert  chunk.frag  chunk.vert  chunkCommon.glsl  debug.vert  debugDepth.frag  deffered.frag  depthMap.frag  depthMap.geom  depthMap.vert  fbo.frag  fbo.vert  itemBlock.frag  itemBlock.vert  itemModel.frag  itemModel.vert  model.frag  model.vert
src/Game/Rendering/Shaders/Deffered/: deffered.frag  sampling.frag  shadowSamples.glsl
src/Game/Rendering/Shaders/Forward/: chunkWater.frag  chunkWater.vert
src/Game/Systems/: CameraSystem.cpp  CameraSystem.hpp  MeshRenderSystem.cpp  MeshRenderSystem.hpp  PlayerMovementComponent.cpp  PlayerMovementComponent.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp
src/Image/: Color32.cpp  Color32.hpp  Image32.cpp  Image32.hpp
src/Json/: JsonParser.cpp  JsonPrinter.cpp  JsonValue.cpp  JsonValue.hpp
src/Lang/: ByteCode.cpp  ByteCode.hpp  Op.hpp  Program.hpp  Value.hpp  Vm.cpp  Vm.hpp  notes.txt  test.txt  test.voxl
src/Lang/Ast/: Expr.cpp  Expr.hpp  ExprVisitor.hpp  Stmt.cpp  Stmt.hpp  StmtVisitor.hpp
src/Lang/Ast/Expr/: BinaryExpr.cpp  BinaryExpr.hpp  FloatConstantExpr.cpp  FloatConstantExpr.hpp  IntConstantExpr.cpp  IntConstantExpr.hpp  NumberConstantExpr.cpp  NumberConstantExpr.hpp
src/Lang/Ast/Stmt/: ExprStmt.cpp  ExprStmt.hpp  LetStmt.cpp  LetStmt.hpp  PrintStmt.cpp  PrintStmt.hpp  VariableDeclarationStmt.cpp  VariableDeclarationStmt.hpp
src/Lang/CodeSnippets/: ExprDeclaration.snippet  ExprDefinition.snippet  StmtDeclaration.snippet  StmtDefinition.snippet
src/Lang/Compiling/: Compiler.cpp  Compiler.hpp
src/Lang/Debug/: AstJsonifier.cpp  AstJsonifier.hpp  Disassembler.cpp  Disassembler.hpp
src/Lang/Parsing/: Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp
src/Lang/TypeChecking/: DataType.cpp  DataType.hpp  TypeChecker.hpp
src/Log/: Log.cpp  Log.hpp
src/Math/: Aabb.hpp  Angles.hpp  Box.hpp  Color.cpp  Color.hpp  Frsutum.cpp  Frustum.cpp  Frustum.hpp  GenericAabb.hpp  GenericBox.hpp  GenericMat4.hpp  GenericQuat.hpp  GenericQuaternion.hpp  GenericVec2.hpp  GenericVec3.hpp  Interpolation.hpp  Mat4.hpp  Other.hpp  Plane.cpp  Plane.hpp  Quat.hpp  Quaternion.hpp  Sphere.cpp  Sphere.hpp  TODO  Vec2.hpp  Vec3.hpp
src/Menu/: MenuScene.cpp  MenuScene.hpp  button.frag  button.vert
src/Model/: Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp
src/ObjParser/: ObjParser.cpp  ObjParser.hpp
src/TestScene/: RenderingSystem.cpp  RenderingSystem.hpp  TestScene.cpp  TestScene.hpp  shader.frag  shader.vert
src/Utils/: ByteBuffer.cpp  ByteBuffer.hpp  FileIo.cpp  FileIo.hpp  SmartPointers.hpp  Span.hpp  UninitializedArray.hpp
test/: CMakeLists.txt
test/Engine/Ecs/: EcsTest.cpp
test/Json/: JsonParserTest.cpp  JsonPrinterTest.cpp
test/Math/: Mat4Test.cpp  Vec2Test.cpp  Vec3Test.cpp
(+30 files in other folders)
